--- a/public/admin/editor.html
+++ b/public/admin/editor.html
@@ -926,7 +926,7 @@
             newLi.dataset.placeholder = 'List item...';
             li.after(newLi);
             newLi.focus();
-            triggerAutoSave();
+            debouncedPreview();
           } else if (e.key === 'Backspace' && li.innerHTML === '' && listEl.children.length > 1) {
             e.preventDefault();
             const prevLi = li.previousElementSibling;
@@ -941,7 +941,7 @@
               sel.removeAllRanges();
               sel.addRange(range);
             }
-            triggerAutoSave();
+            debouncedPreview();
           }
         });
       }
@@ -997,7 +997,7 @@
             }
 
             updateBlockStyling(block);
-            triggerAutoSave();
+            debouncedPreview();
           });
           header.appendChild(typeSelect);
         } else if (type === 'heading') {
@@ -1015,7 +1015,7 @@
           typeSelect.addEventListener('change', () => {
             block.dataset.level = typeSelect.value;
             updateBlockStyling(block);
-            triggerAutoSave();
+            debouncedPreview();
           });
           header.appendChild(typeSelect);
         } else if (type === 'list' || type === 'unordered-list' || type === 'ordered-list') {
@@ -1048,7 +1048,7 @@
               oldList.replaceWith(newList);
               setupListKeyHandlers(newList);
             }
-            triggerAutoSave();
+            debouncedPreview();
           });
           header.appendChild(typeSelect);
         } else {
@@ -1277,7 +1277,7 @@
         } else if (cmd === 'code') {
           wrapSelectionWithTag('code');
         }
-        triggerAutoSave();
+        debouncedPreview();
       }
 
       // ============ FLOATING FORMAT TOOLBAR (disabled - using inline buttons) ============
@@ -1351,7 +1351,7 @@
           range.surroundContents(wrapper);
         }
 
-        triggerAutoSave();
+        debouncedPreview();
       }
 
       // ============ LINK POPUP ============
@@ -1381,6 +1381,13 @@
           return;
         }
 
+        // Validate href pattern (same as compiler validation)
+        const hrefPattern = /^(\/[a-z0-9._/-]*|#[a-z0-9-]*|[a-z0-9-]+\.html)$/i;
+        if (!hrefPattern.test(href)) {
+          alert('Ungültiger Link. Erlaubt sind:\n- Relative Pfade: /path/to/page\n- Anker: #section\n- HTML-Dateien: page.html');
+          return;
+        }
+
         if (savedSelection) {
           const sel = window.getSelection();
           sel.removeAllRanges();
@@ -1389,6 +1396,7 @@
         }
         linkPopup.classList.add('hidden');
         savedSelection = null;
+        debouncedPreview();
       });
 
       linkCancelBtn.addEventListener('click', () => {
@@ -1458,7 +1466,14 @@
               targetArray.push({ type: 'code', children });
             } else if (tag === 'a') {
               const href = node.getAttribute('href') || '';
-              targetArray.push({ type: 'link', href, children });
+              // Only include link if href is valid
+              const hrefPattern = /^(\/[a-z0-9._/-]*|#[a-z0-9-]*|[a-z0-9-]+\.html)$/i;
+              if (href && hrefPattern.test(href)) {
+                targetArray.push({ type: 'link', href, children });
+              } else {
+                // Invalid or empty href - just include children without link
+                targetArray.push(...children);
+              }
             } else {
               targetArray.push(...children);
             }
